# blade

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh
blade-app/: Cargo.toml
blade-app/src/: main.rs  shader.rs  validation.rs  vulkan.rs
blade-core/: Cargo.toml
blade-io/: Cargo.toml
blade-io/src/: load.rs
cad-rs/: Cargo.toml
cad-rs/src/: main.rs
holy-cad/: Cargo.toml
holy-cad/src/: lib.rs  main.rs
shaders/src/: shader.frag  shader.vert  vertex_shader.vert
src/: app.rs  constants.rs  main.rs
src/app/: mod.rs  shader.rs  utility.rs  validation.rs  vulkan.rs
src/file/: load.rs
src/math/: vertex.rs
