[workspace]
resolver = "2"
members = [
        "blade-app",
        "blade-core",
        "blade-io",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "A simple, fast CAD kernel and application."
readme = "README.md"
repository = "https://github.com/andrewfurey21/blade"
license = "MIT"
authors = ["Andrew Furey"]

[workspace.dependencies.blade-app]
version = "0.1.0"
path = "blade-app/"

[workspace.dependencies.blade-core]
version = "0.1.0"
path = "blade-core/"

[workspace.dependencies.blade-io]
version = "0.1.0"
path = "blade-io/"
