[package]
name = "blade-app"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
blade-core.workspace = true
blade-io.workspace = true
num = "0.4.0"
ash = "0.37.3"
ash-window = "0.12.0"
env_logger = "0.10.0"
log = "0.4.17"
winit = "0.28.6"
raw-window-handle = "0.5.2"
glam = "0.24.2"
image = "0.24.6"
memoffset = "0.9.0"
tobj = "4.0.0"
anyhow = "1.0.75"
bytemuck = "1.14.0"
colored = "2.0.4"

[build-dependencies]
shaderc = "0.8.2"
